--- a/website/index.html
+++ b/website/index.html
@@ -3,8 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Screenplay AI - Professional Screenplay Writing Powered by AI</title>
-    <meta name="description" content="Write professional screenplays faster with AI-powered assistance. Industry-standard formatting, intelligent scene analysis, and character development tools.">
+    <title>Screenplay AI — Professional Screenwriting, Elevated</title>
+    <meta name="description" content="Industry-leading screenplay software powered by artificial intelligence. Trusted by writers crafting tomorrow's stories.">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;600;700&family=Inter:wght@300;400;500;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
@@ -14,7 +17,7 @@
                 <h1>Screenplay AI</h1>
             </div>
             <nav>
-                <a href="#features">Features</a>
+                <a href="#features">Capabilities</a>
                 <a href="#download">Download</a>
                 <a href="#pricing">Pricing</a>
             </nav>
@@ -23,118 +26,103 @@
 
     <section class="hero">
         <div class="container">
-            <h1>Write Better Screenplays, Faster</h1>
-            <p class="subtitle">Professional screenplay writing powered by AI. Industry-standard formatting, intelligent assistance, and seamless collaboration.</p>
+            <h1>Where Stories<br>Take Shape</h1>
+            <p class="subtitle">Professional screenwriting software designed for the modern storyteller. Intelligent formatting, powerful organization, and seamless creative flow.</p>
             <div class="cta-buttons">
-                <a href="#download" class="btn btn-primary">Download Free Trial</a>
-                <a href="#features" class="btn btn-secondary">See Features</a>
+                <a href="#download" class="btn btn-primary">Download for macOS</a>
             </div>
+            <p class="hero-note">Free 14-day trial. No credit card required.</p>
         </div>
     </section>
 
     <section id="features" class="features">
         <div class="container">
-            <h2>Everything You Need to Write Your Masterpiece</h2>
+            <h2>Crafted for Excellence</h2>
             <div class="features-grid">
                 <div class="feature">
-                    <div class="icon">✍️</div>
-                    <h3>Industry-Standard Formatting</h3>
-                    <p>Automatic screenplay formatting with Fountain support. Focus on writing, not margins.</p>
+                    <h3>Industry Standard</h3>
+                    <p>Automatic screenplay formatting adheres to Hollywood standards. Fountain support ensures compatibility with every major production workflow.</p>
                 </div>
                 <div class="feature">
-                    <div class="icon">🤖</div>
-                    <h3>AI Writing Assistant</h3>
-                    <p>Get unstuck with intelligent dialogue suggestions, scene expansions, and story analysis.</p>
+                    <h3>Intelligent Assistance</h3>
+                    <p>AI-powered writing companion understands narrative structure, character development, and story pacing. Get unstuck without losing your voice.</p>
                 </div>
                 <div class="feature">
-                    <div class="icon">👥</div>
-                    <h3>Character Management</h3>
-                    <p>Track character arcs, relationships, and appearances across your entire screenplay.</p>
-                </div>
-                <div class="feature">
-                    <div class="icon">🎬</div>
-                    <h3>Scene Organization</h3>
-                    <p>Visualize your story structure with scene cards and timeline views.</p>
-                </div>
-                <div class="feature">
-                    <div class="icon">📊</div>
-                    <h3>Story Analysis</h3>
-                    <p>AI-powered storyline analysis to identify pacing issues and plot holes.</p>
-                </div>
-                <div class="feature">
-                    <div class="icon">📄</div>
-                    <h3>Export Anywhere</h3>
-                    <p>Export to PDF, Final Draft (FDX), or Fountain format with one click.</p>
+                    <h3>Complete Organization</h3>
+                    <p>Scene management, character tracking, and timeline visualization. Every element of your screenplay, precisely where you need it.</p>
                 </div>
             </div>
+        </div>
+    </section>
+
+    <section class="testimonial">
+        <div class="container">
+            <blockquote>
+                "The most elegant screenwriting tool I've used. It disappears when you need to write, and appears exactly when you need help."
+            </blockquote>
+            <cite>— Professional Screenwriter</cite>
         </div>
     </section>
 
     <section id="download" class="download">
         <div class="container">
-            <h2>Download Screenplay AI</h2>
-            <p class="subtitle">Available for macOS, Windows, and Linux</p>
+            <h2>Get Started</h2>
+            <p class="subtitle">Available for macOS. Universal binary supports both Intel and Apple Silicon.</p>
             
-            <div class="download-buttons">
-                <a href="#" id="download-mac" class="download-btn mac" style="display: none;">
-                    <div class="platform-icon">🍎</div>
-                    <div class="platform-info">
-                        <div class="platform-name">Download for macOS</div>
-                        <div class="platform-detail">Universal (Intel & Apple Silicon)</div>
-                    </div>
+            <div class="download-wrapper">
+                <a href="#" id="download-mac" class="download-btn" style="display: none;">
+                    <span class="download-label">Download for macOS</span>
+                    <span class="download-detail">Version <span id="current-version">1.0.0</span></span>
                 </a>
             </div>
 
-            <div class="all-platforms">
-                <p>Other platforms:</p>
-                <a href="#" class="platform-link" data-platform="mac">macOS</a>
+            <div class="download-requirements">
+                <p>Requires macOS 10.12 or later</p>
             </div>
-
-            <p class="version-info">Current version: <span id="current-version">Loading...</span></p>
         </div>
     </section>
 
     <section id="pricing" class="pricing">
         <div class="container">
-            <h2>Simple, Transparent Pricing</h2>
+            <h2>Choose Your Plan</h2>
             <div class="pricing-cards">
                 <div class="pricing-card">
-                    <h3>Free Trial</h3>
-                    <div class="price">$0</div>
+                    <h3>Trial</h3>
+                    <div class="price">Free</div>
                     <p class="period">14 days</p>
                     <ul>
-                        <li>✓ Full access to all features</li>
-                        <li>✓ Unlimited screenplay pages</li>
-                        <li>✓ AI assistant (limited queries)</li>
-                        <li>✓ Export to PDF/FDX</li>
+                        <li>Complete feature access</li>
+                        <li>Unlimited pages</li>
+                        <li>AI assistant</li>
+                        <li>Export to PDF & FDX</li>
                     </ul>
-                    <a href="#download" class="btn btn-primary">Start Free Trial</a>
+                    <a href="#download" class="btn btn-secondary">Start Trial</a>
                 </div>
                 <div class="pricing-card featured">
-                    <div class="badge">Most Popular</div>
-                    <h3>Pro</h3>
+                    <h3>Professional</h3>
                     <div class="price">$29</div>
                     <p class="period">per month</p>
                     <ul>
-                        <li>✓ Everything in Free Trial</li>
-                        <li>✓ Unlimited AI queries</li>
-                        <li>✓ Advanced story analysis</li>
-                        <li>✓ Priority support</li>
-                        <li>✓ Cloud sync (coming soon)</li>
+                        <li>Everything in Trial</li>
+                        <li>Unlimited AI queries</li>
+                        <li>Advanced story analysis</li>
+                        <li>Priority support</li>
+                        <li>Future updates included</li>
                     </ul>
                     <a href="#download" class="btn btn-primary">Get Started</a>
                 </div>
                 <div class="pricing-card">
                     <h3>Lifetime</h3>
                     <div class="price">$299</div>
-                    <p class="period">one-time</p>
+                    <p class="period">one-time payment</p>
                     <ul>
-                        <li>✓ Everything in Pro</li>
-                        <li>✓ Lifetime updates</li>
-                        <li>✓ All future features</li>
-                        <li>✓ VIP support</li>
+                        <li>Everything in Professional</li>
+                        <li>Lifetime license</li>
+                        <li>All future features</li>
+                        <li>VIP support</li>
+                        <li>Early access to updates</li>
                     </ul>
-                    <a href="#download" class="btn btn-primary">Buy Lifetime</a>
+                    <a href="#download" class="btn btn-secondary">Purchase</a>
                 </div>
             </div>
         </div>
@@ -142,11 +130,19 @@
 
     <footer>
         <div class="container">
-            <p>&copy; 2024 Screenplay AI. All rights reserved.</p>
-            <div class="footer-links">
-                <a href="#">Privacy Policy</a>
-                <a href="#">Terms of Service</a>
-                <a href="mailto:support@screenplayai.com">Contact</a>
+            <div class="footer-content">
+                <div class="footer-brand">
+                    <h3>Screenplay AI</h3>
+                    <p>Professional screenwriting software</p>
+                </div>
+                <div class="footer-links">
+                    <a href="#">Privacy</a>
+                    <a href="#">Terms</a>
+                    <a href="mailto:support@screenplayai.com">Support</a>
+                </div>
+            </div>
+            <div class="footer-bottom">
+                <p>&copy; 2024 Screenplay AI. All rights reserved.</p>
             </div>
         </div>
     </footer>
@@ -154,4 +150,3 @@
     <script src="script.js"></script>
 </body>
 </html>
-
